--- a/cmd/mediator-server/mediator-server-dist.yml
+++ b/cmd/mediator-server/mediator-server-dist.yml
@@ -21,3 +21,21 @@ mediatorscript:
   # File used as data storage
   # Created if it does not exist - fails if unable to read or write
   scriptstorage: /opt/uquidit.co/data/uqtu_be/ms_scripts.json
+
+  # configuration of ms-client conf generator
+  clientconfiguration:
+
+    # name of the generated JSON file
+    # this file will be uploaded to Securechange pod so mediator-client can use
+    # name has no impact: destination file on SC will be renamed into what mediator-client expects
+    settingsfile: /opt/uquidit.co/data/mediator-client.json
+
+    # full path to the script that uploads generated mediator-client settings to securechange
+    # it will be called using '/usr/bin/sudo' with no password
+    # sudoers must be configured accordingly
+    uploadscript: /opt/uquidit.co/lib/bash/upload-mediator-conf.sh
+
+    # full path to the script that downloads mediator-client settings from securechange
+    # it will be called using '/usr/bin/sudo' with no password
+    # sudoers must be configured accordingly
+    downloadscript: /opt/uquidit.co/lib/bash/download-mediator-conf.sh
