update golang and packages

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-Makefile
+bin/*
+package/*
 cmd/mediator-client/mediator.log
 cmd/mediator-client/mediator-client.yml
 cmd/mediator-client/mediator-client
