--- a/cmd/mediator-server/mediator-server_dist.yml
+++ b/cmd/mediator-server/mediator-server_dist.yml
@@ -5,22 +5,22 @@ server:
 
   ssl:
     enabled: [true|false]
-    certificate: /opt/uquidit.co/conf/ssl.crt
-    key: /opt/uquidit.co/conf/ssl.key
+    certificate: /opt/mediator/conf/ssl.crt
+    key: /opt/mediator/conf/ssl.key
 
   # The backend can log to specific files, or to stdout/stderr using "-"
   log:
     # Routing logs
-    access: /opt/uquidit.co/log/uqtu_be.access.log
+    access: /opt/mediator/log/mediator_be.access.log
     # Execution messages
-    error: /opt/uquidit.co/log/uqtu_be.execution.log
+    error: /opt/mediator/log/mediator_be.execution.log
 
 # Manage scripts available to the Mediatorscript
 # Feature used in TOS Aurora
 mediatorscript:
   # File used as data storage
   # Created if it does not exist - fails if unable to read or write
-  scriptstorage: /opt/uquidit.co/data/uqtu_be/ms_scripts.json
+  scriptstorage: /opt/mediator/data/mediator_be/ms_scripts.json
 
   # configuration of ms-client conf generator
   clientconfiguration:
@@ -28,14 +28,14 @@ mediatorscript:
     # name of the generated JSON file
     # this file will be uploaded to Securechange pod so mediator-client can use
     # name has no impact: destination file on SC will be renamed into what mediator-client expects
-    settingsfile: /opt/uquidit.co/data/mediator-client.json
+    settingsfile: /opt/mediator/data/mediator-client.json
 
     # full path to the script that uploads generated mediator-client settings to securechange
     # it will be called using '/usr/bin/sudo' with no password
     # sudoers must be configured accordingly
-    uploadscript: /opt/uquidit.co/lib/bash/mediator-conf-upload.sh
+    uploadscript: /opt/mediator/lib/bash/mediator-conf-upload.sh
 
     # full path to the script that downloads mediator-client settings from securechange
     # it will be called using '/usr/bin/sudo' with no password
     # sudoers must be configured accordingly
-    downloadscript: /opt/uquidit.co/lib/bash/mediator-conf-download.sh
+    downloadscript: /opt/mediator/lib/bash/mediator-conf-download.sh
